# anvil

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: alpha-feedback.yml
.github/workflows/: binary-experimental.yml  ci.yml  python-package.yml
benchmarks/: baseline.github-hosted.alpha.json
docs/: README.md  alpha-feedback-template.md  command-contract-v1.md  post-alpha-roadmap.md  quickstart-alpha.md  release-alpha-checklist.md  triage-alpha-process.md  troubleshooting-alpha.md
docs/adr/: 0001-defer-v1-non-goals.md  0001-v1-wedge.md  0002-standalone-cli-delegated-packaging.md  0003-binary-distribution-strategy.md  README.md
docs/dev-loop/: incremental-checks.md  terminal-ux.md
docs/getting-started/: README.md  install.md  quickstart-alpha.md  quickstart-cli.md  quickstart-lib.md  troubleshooting-alpha.md
docs/quality/: e2e-testing.md  perf-baseline-alpha.md  perf-benchmarks.md
docs/reference/: README.md  command-contract-v1.md  fastapi-scaffold-template.md
docs/release/: alpha-feedback-template.md  binary-distribution-strategy.md  github-releases.md  pypi-publishing.md  release-alpha-checklist.md  releasing.md
infra/ci/: github-actions-notes.md
infra/docker/: Dockerfile
scripts/: benchmark_devloop_checks.py  benchmark_runtime.py  run_benchmarks.sh  run_e2e.sh
src/anvil/: cli.py  patch.py  profiles.py
src/flint/: __main__.py  cli.py  config.py  devloop.py  errors.py  tools.py
src/pyignite/: __init__.py  cli.py  (+2 more)
tests/: test_cli.py  test_config.py  test_devloop.py  test_patch.py  test_tools.py
(+64 files in other folders)
