[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "flint-dev"
version = "0.1.0"
description = "Opinionated dev loop CLI for existing Python ASGI projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Flint Team" }]
dependencies = [
  "typer>=0.16.0",
  "watchfiles>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
flint = "flint.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/flint"]
